@@ -1,8 +1,19 @@
 package me.realized.duels.arena;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashMap;
+
+import java.util.List;
+import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Objects;
+import java.util.Set;
+import java.util.UUID;
 import java.util.stream.Collectors;
+
 import lombok.Getter;
 import me.realized.duels.api.match.Match;
 import me.realized.duels.kit.KitImpl;
@@ -39,6 +50,8 @@ public class MatchImpl implements Match {
     @Getter
     private final int bet;
     @Getter
+    private final boolean mcmmoSkills;
+    @Getter
     private final Queue source;
 
     @Getter
@@ -50,12 +63,13 @@ public class MatchImpl implements Match {
     // Default value for players is false, which is set to true if player is killed in the match.
     private final Map<Player, PlayerStatus> players = new HashMap<>();
 
-    MatchImpl(final ArenaImpl arena, final KitImpl kit, final Map<UUID, List<ItemStack>> items, final int bet, final Queue source) {
+    MatchImpl(final ArenaImpl arena, final KitImpl kit, final Map<UUID, List<ItemStack>> items, final int bet, final boolean mcmmoSkills, final Queue source) {
         this.arena = arena;
         this.start = System.currentTimeMillis();
         this.kit = kit;
         this.items = items;
         this.bet = bet;
+        this.mcmmoSkills = mcmmoSkills;
         this.source = source;
     }
 
@@ -64,7 +78,10 @@ public class MatchImpl implements Match {
     }
 
     Set<Player> getAlivePlayers() {
-        return players.entrySet().stream().filter(entry -> !entry.getValue().isDead).map(Entry::getKey).collect(Collectors.toSet());
+        return players.entrySet().stream()
+                .filter(entry -> !entry.getValue().isDead)
+                .map(Entry::getKey)
+                .collect(Collectors.toSet());
     }
 
     public void addDamageToPlayer(Player player, double damage) {
@@ -78,23 +95,19 @@ public class MatchImpl implements Match {
     }
 
     public Player getWinnerOfDamage() {
-        Player winner = players.entrySet()
+        return players.entrySet()
                 .stream()
                 .max(Comparator.comparingDouble(entry -> entry.getValue().damageCount))
-                .map(Map.Entry::getKey)
+                .map(Entry::getKey)
                 .orElse(null);
-
-        return winner;
     }
 
     public Player getLooserOfDamage() {
-        Player looser = players.entrySet()
+        return players.entrySet()
                 .stream()
                 .min(Comparator.comparingDouble(entry -> entry.getValue().damageCount))
-                .map(Map.Entry::getKey)
+                .map(Entry::getKey)
                 .orElse(null);
-
-        return looser;
     }
 
     public Set<Player> getAllPlayers() {
@@ -112,9 +125,9 @@ public class MatchImpl implements Match {
     public boolean isOwnInventory() {
         return kit == null;
     }
-    
+
     public List<ItemStack> getItems() {
-        return items != null ? items.values().stream().flatMap(Collection::stream).collect(Collectors.toList()) : Collections.emptyList();
+        return items != null ? items.values().stream().flatMap(Collection::stream).toList() : List.of();
     }
 
     void setFinished() {
@@ -131,11 +144,11 @@ public class MatchImpl implements Match {
         Objects.requireNonNull(player, "player");
 
         if (this.items == null) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         final List<ItemStack> items = this.items.get(player.getUniqueId());
-        return items != null ? items : Collections.emptyList();
+        return items != null ? items : List.of();
     }
 
     @NotNull
