@@ -31,7 +31,7 @@ public class HelpCommand extends BaseCommand {
         if (args.length == 2) {
             return categories.stream()
                 .filter(category -> category.toLowerCase().startsWith(args[1].toLowerCase()))
-                .collect(Collectors.toList());
+                .toList();
         }
 
         return null;
