@@ -29,9 +29,9 @@ public class InfoCommand extends BaseCommand {
 
         final String inUse = arena.isUsed() ? lang.getMessage("GENERAL.true") : lang.getMessage("GENERAL.false");
         final String disabled = arena.isDisabled() ? lang.getMessage("GENERAL.true") : lang.getMessage("GENERAL.false");
-        final String kits = StringUtil.join(arena.getKits().stream().map(KitImpl::getName).collect(Collectors.toList()), ", ");
-        final String positions = StringUtil.join(arena.getPositions().values().stream().map(StringUtil::parse).collect(Collectors.toList()), ", ");
-        final String players = StringUtil.join(arena.getPlayers().stream().map(Player::getName).collect(Collectors.toList()), ", ");
+        final String kits = StringUtil.join(arena.getKits().stream().map(KitImpl::getName).toList(), ", ");
+        final String positions = StringUtil.join(arena.getPositions().values().stream().map(StringUtil::parse).toList(), ", ");
+        final String players = StringUtil.join(arena.getPlayers().stream().map(Player::getName).toList(), ", ");
         lang.sendMessage(sender, "COMMAND.duels.info", "name", name, "in_use", inUse, "disabled", disabled, "kits",
             !kits.isEmpty() ? kits : lang.getMessage("GENERAL.none"), "positions", !positions.isEmpty() ? positions : lang.getMessage("GENERAL.none"), "players",
             !players.isEmpty() ? players : lang.getMessage("GENERAL.none"));
