@@ -22,9 +22,9 @@ public class ListCommand extends BaseCommand {
     protected void execute(final CommandSender sender, final String label, final String[] args) {
         final List<String> arenas = new ArrayList<>();
         arenaManager.getArenasImpl().forEach(arena -> arenas.add("&" + getColor(arena) + arena.getName()));
-        final String kits = StringUtil.join(kitManager.getKits().stream().map(Kit::getName).collect(Collectors.toList()), ", ");
-        final String queues = StringUtil.join(queueManager.getQueues().stream().map(DQueue::toString).collect(Collectors.toList()), ", ");
-        final String signs = StringUtil.join(queueSignManager.getSigns().stream().map(QueueSignImpl::toString).collect(Collectors.toList()), ", ");
+        final String kits = StringUtil.join(kitManager.getKits().stream().map(Kit::getName).toList(), ", ");
+        final String queues = StringUtil.join(queueManager.getQueues().stream().map(DQueue::toString).toList(), ", ");
+        final String signs = StringUtil.join(queueSignManager.getSigns().stream().map(QueueSignImpl::toString).toList(), ", ");
         lang.sendMessage(sender, "COMMAND.duels.list",
             "arenas", !arenas.isEmpty() ? StringUtil.join(arenas, "&r, &r") : lang.getMessage("GENERAL.none"),
             "kits", !kits.isEmpty() ? kits : lang.getMessage("GENERAL.none"),
