@@ -33,7 +33,7 @@ public class PlaysoundCommand extends BaseCommand {
         if (args.length == 2) {
             return config.getSounds().stream()
                 .filter(name -> name.toLowerCase().startsWith(args[1].toLowerCase()))
-                .collect(Collectors.toList());
+                    .toList();
         }
 
         return null;
